kubernetes/kube-frontend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-frontend
  labels:
    app: kube-frontend
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: kube-frontend

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-frontend
  labels:
    app: kube-frontend
spec:
  selector:
    matchLabels:
      app: kube-frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: kube-frontend
    spec:
      containers:
        - name: kube-frontend
          image: jkostov/kube-frontend:latest
