kubernetes/kube-kafka-control-center-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-kafka-control-center
  labels:
    app: kube-kafka-control-center
spec:
  type: ClusterIP
  ports:
    - port: 9021
      targetPort: 9021
  selector:
    app: kube-kafka-control-center

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-kafka-control-center
  labels:
    app: kube-kafka-control-center
spec:
  selector:
    matchLabels:
      app: kube-kafka-control-center
  replicas: 1
  template:
    metadata:
      labels:
        app: kube-kafka-control-center
    spec:
      containers:
        - name: kube-kafka-control-center
          image: confluentinc/cp-enterprise-control-center:5.4.0
