kubernetes/kube-resource-mongo-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-resource-mongo
  labels:
    app: kube-resource-mongo
spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: kube-resource-mongo

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-resource-mongo
  labels:
    app: kube-resource-mongo
spec:
  selector:
    matchLabels:
      app: kube-resource-mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: kube-resource-mongo
    spec:
      containers:
        - name: kube-resource-mongo
          image: jkostov/mongo:4.2
          volumeMounts:
            - mountPath: /data/db
              name: mongo-data
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: kube-resource-mongo-persistent-volume
