kubernetes/kube-zookeeper-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-zookeeper
  labels:
    app: kube-zookeeper
spec:
  type: ClusterIP
  ports:
    - name: client
      port: 2181
      targetPort: 2181
      protocol: TCP
    - name: follower
      port: 2888
      targetPort: 2888
      protocol: TCP
    - name: leader
      port: 3888
      targetPort: 3888
      protocol: TCP
  selector:
    app: kube-zookeeper

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-zookeeper
  labels:
    app: kube-zookeeper
spec:
  selector:
    matchLabels:
      app: kube-zookeeper
  replicas: 1
  template:
    metadata:
      labels:
        app: kube-zookeeper
    spec:
      containers:
        - name: kube-zookeeper
          image: wurstmeister/zookeeper:3.4.6
